# crawler-101

./: README.md  docker-compose.yml  pyproject.toml
jsons/: Growth.json
src/: __main__.py  config_logger.py  crawler.py  generic_crawler.py  reclame-aqui-crawler.py  reclame_aqui_crawler.py
src/crawler/: abstract-crawler.py  abstract_crawler.py
src/steps/: actions.py
src/tools/: browser_provider.py  mongodb.py  redis.py
